# Marines-Jet-Packages

./: .gitignore  .gitmodules  README.md
camera_manager/: package.xml  setup.py
camera_manager/camera_manager/: camera_manager.py
custom_interfaces/: CMakeLists.txt  package.xml
narval_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
narval_description/config/: params.yaml
narval_description/launch/: description.launch.py  display.launch.py
narval_description/nodes/: narval_state_publisher_node.py
narval_description/rviz/: narval.rviz  urdf.rviz
narval_description/xacro/: bluerov2.urdf.xacro  narval_base.urdf.xacro  simplified_narval.urdf.xacro
narval_thruster_manager/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
narval_thruster_manager/config/: params.yaml
narval_thruster_manager/data/: t200_10V_PWM.txt  t200_10V_RPM.txt  t200_12V_PWM.txt  t200_12V_RPM.txt  t200_14V_PWM.txt  t200_14V_RPM.txt  t200_16V_PWM.txt  t200_16V_RPM.txt  t200_18V_PWM.txt  t200_18V_RPM.txt  t200_20V_PWM.txt  t200_20V_RPM.txt
narval_thruster_manager/include/narval_thruster_manager/: model_parser.h  thruster_link.h  thruster_manager.h  thruster_manager_node.h
narval_thruster_manager/launch/: display.launch.py  manager.launch.py
narval_thruster_manager/narval_thruster_manager/: coefficient.py  logger.py  modelParser.py  test.py  thruster.py  thrusterAllocationMatrix.py  thrusterManager.py
narval_thruster_manager/nodes/: thrusterManager_node.py
narval_thruster_manager/rviz/: thruster.rviz
narval_thruster_manager/src/: publish_wrenches.cpp  thruster_manager.cpp  thruster_manager_node.cpp
