<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>narval_description</name>
    <version>0.0.1</version>
    <description>Narval description files</description>

    <maintainer email="piotrflak@student.agh.edu.pl">Piotr Flak</maintainer>
    <license>MIT</license>

    <author>Piotr Flak</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>xacro</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>

    <test_depend>ament_cmake_copyright</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>